--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -1,190 +1,199 @@
 html,
 body {
-  height: 100%;
+height: 100%;
 }
 
 body {
-  margin: 0;
-  padding: 0;
+margin: 0;
+padding: 0;
 }
 
 .presentation {
-  background-image: url("/annieHex.png");
-  height: 71em;
-  width: 100%;
+background-image: url("/annieHex.png");
+height: 71em;
+width: 100%;
 
 }
 .h2didi {
-  padding-top: 2em;
-  text-align: center;
-  font-size: 45px;
-  font-family: Impact, fantasy;
-  
+padding-top: 2em;
+text-align: center;
+font-size: 45px;
+font-family: Impact, fantasy;
+
 
 }
 #titleh2 {
-  padding-top: 2em;
-  text-align: center;
-  font-size: 45px;
-  font-family: Impact, fantasy;
-  color: white;
+padding-top: 2em;
+text-align: center;
+font-size: 45px;
+font-family: Impact, fantasy;
+color: white;
 }
 
 #carte {
-  margin-top: 10em;
-  -webkit-box-shadow: none;
-  box-shadow: none;
-  border-radius: 30px;
-  box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+margin-top: 10em;
+-webkit-box-shadow: none;
+box-shadow: none;
+border-radius: 30px;
+box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
 }
 
 #colorMenu {
-  background-color: white;
+background-color: white;
 }
 
 #card {
-  margin-top: 10em;
-  margin: 3em;
-  height: 30em;
-  border-radius: 30px;
+margin-top: 10em;
+margin: 3em;
+height: 30em;
+border-radius: 30px;
 
 }
 
 #sizeCard {
-  height: 20em;
-  border-radius: 30px;
+height: 20em;
+border-radius: 30px;
 }
 
 #sizeCard2 {
-  height: 37em;
+height: 37em;
 }
 
 #titleCard {
-  font-size: 30px;
+font-size: 30px;
 }
 
 .jeux {
-  background-image: url("/aurelionpx.png");
-  background-repeat: no-repeat;
-  height: 71em;
-  width: 100%;
-  
+background-image: url("/aurliocut.png");
+background-repeat: no-repeat;
+height: 71em;
+width: 100%;
+
 }
 
 #textCard {
-  color: white;
-  font-size: 24px;
-  font-family: Impact, fantasy;
+color: white;
+font-size: 24px;
+font-family: Impact, fantasy;
 }
 
 .imgLogo {
-  float: left;
-  margin: 20px;
+float: left;
+margin: 20px;
 }
 
 .titre {
-  font-size: 40px;
-  padding-left: 100px;
-  font-weight: bold;
-  color: #787878;
-  font-family: Impact, fantasy;
+font-size: 40px;
+padding-left: 100px;
+font-weight: bold;
+color: #787878;
+font-family: Impact, fantasy;
 }
 
 #itemsMenu {
-  color: #595959;
-  font-family: Impact, fantasy;
-  font-size: 30px;
+color: #595959;
+font-family: Impact, fantasy;
+font-size: 30px;
 }
 
 #menu {
-  padding-right: 120px;
-  font-size: 30px;
+padding-right: 120px;
+font-size: 30px;
 }
 
 .logoMenu {
-  height: 80px;
-  width: 80px;
+height: 80px;
+width: 80px;
 }
 
 #menuLi {
-  padding-left: 30px;
+padding-left: 30px;
 }
 
 .bs-example {
-  width: 100%;
-  height: 100%;
+width: 100%;
+height: 100%;
 }
 
 #imgtaille img {
-  width: 100%;
-  height: 100%;
-  display: block;
+width: 100%;
+height: 100%;
+display: block;
 }
 
 .carousel,
 .item,
 .active {
-  height: 100%;
-  margin-top: 0px;
+height: 100%;
+margin-top: 0px;
 }
 
 .carousel-inner {
-  height: 100%;
+height: 100%;
 }
 
 .discord {
 
-  background-image: url("/803488.png");
-  background-repeat: no-repeat;
-  height: 71em;
-  width: 100%;
+background-image: url("/803488.png");
+background-repeat: no-repeat;
+height: 71em;
+width: 100%;
 }
 
 #linkDiscord {
-  float: left;
-  margin-top: 10%;
-  margin-left: 20%;
-  box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+float: left;
+margin-top: 10%;
+margin-left: 20%;
+box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
 }
 
 #titleh3 {
-  display: inline-block;
-  margin-top: 15%;
-  margin-left: 5%;
-  font-size: 60px;
-  color: white;
+display: inline-block;
+margin-top: 15%;
+margin-left: 5%;
+font-size: 60px;
+color: white;
 }
 .cut {
-	width: 100%;
-	height: 7em;
-  background-image: url('/backgroundWires.png');
-  background-attachment: fixed;
-		
+width: 100%;
+height: 7em;
+background-image: url('/backgroundWires.png');
+background-attachment: fixed;
+
+}
+.miniCut{
+width: 100%;
+height: 3em;
+background-color:#2f2f2f;
+color:white ;
+font-size: 20px ;
+text-align:center;
+
 }
 
 #linkDiscord {
-  
-  animation-name: stretch;
-  animation-duration: 3.5s; 
-  animation-timing-function: ease-out; 
-  animation-delay: 3;
-  animation-direction: alternate;
-  animation-iteration-count: infinite;
-  animation-fill-mode: none;
-  animation-play-state: running;
+
+animation-name: stretch;
+animation-duration: 3.5s; 
+animation-timing-function: ease-out; 
+animation-delay: 3;
+animation-direction: alternate;
+animation-iteration-count: infinite;
+animation-fill-mode: none;
+animation-play-state: running;
 }
 
 @keyframes stretch {
-  0% {
-    transform: scale(1);
-    
-  }
-  50% {
-    transform: scale(1.2);
-   
-    }
-  100% {
-    transform: scale(1,1);
-    
-  }
+0% {
+transform: scale(1);
+
+}
+50% {
+transform: scale(1.2);
+
+}
+100% {
+transform: scale(1,1);
+
+}
 }
