changement image ww

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -131,7 +131,7 @@ body {
 }
 
 .discord {
-  background-image: url("/803488.png");
+  background-image: url("/warwick.png");
   background-repeat: no-repeat;
   height: 71em;
   width: 100%;
