--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -134,7 +134,7 @@ height: 100%;
 
 .discord {
 
-background-image: url("/803488.png");
+background-image: url("/warwick.png");
 background-repeat: no-repeat;
 height: 71em;
 width: 100%;
