--- a/public/css/app.css
+++ b/public/css/app.css
@@ -26,7 +26,6 @@ body {
 }
 
 #titleh2 {
-  padding-top: 2em;
   text-align: center;
   font-size: 45px;
   font-family: Impact, fantasy;
@@ -37,7 +36,6 @@ body {
   margin-top: 10em;
   -webkit-box-shadow: none;
   box-shadow: none;
-  border-radius: 30px;
   -webkit-box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
           box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
 }
@@ -59,19 +57,17 @@ body {
 }
 
 #card {
-  margin-top: 10em;
+  margin-top: 40%;
   margin: 3em;
   height: 30em;
-  border-radius: 30px;
 }
 
 #sizeCard {
-  height: 20em;
-  border-radius: 30px;
+  height: 100%;
 }
 
 #sizeCard2 {
-  height: 37em;
+  height: 100%;
 }
 
 #titleCard {
