--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -27,7 +27,6 @@ body {
 
 }
 #titleh2 {
-  padding-top: 2em;
   text-align: center;
   font-size: 45px;
   font-family: Impact, fantasy;
@@ -38,7 +37,6 @@ body {
   margin-top: 10em;
   -webkit-box-shadow: none;
   box-shadow: none;
-  border-radius: 30px;
   box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
 }
 #colorMenu {
@@ -62,20 +60,18 @@ body {
 }
 
 #card {
-  margin-top: 10em;
+  margin-top: 40%;
   margin: 3em;
   height: 30em;
-  border-radius: 30px;
 
 }
 
 #sizeCard {
-  height: 20em;
-  border-radius: 30px;
+  height: 100%;
 }
 
 #sizeCard2 {
-  height: 37em;
+  height: 100%;
 }
 
 #titleCard {
