--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,6 +1,7 @@
 html,
 body {
   height: 100%;
+  width: 100%;
 }
 
 body {
@@ -14,15 +15,8 @@ body {
 
 .presentation {
   background-image: url("/annieHex.png");
-  height: 71em;
+  height: 100%;
   width: 100%;
-}
-
-.h2didi {
-  padding-top: 2em;
-  text-align: center;
-  font-size: 45px;
-  font-family: Impact, fantasy;
 }
 
 #titleh2 {
@@ -33,7 +27,7 @@ body {
 }
 
 #carte {
-  margin-top: 10em;
+  margin-top: 15%;
   -webkit-box-shadow: none;
   box-shadow: none;
   -webkit-box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
@@ -42,24 +36,32 @@ body {
 
 #colorMenu {
   background-color: white;
+  width: 100%;
 }
 
 @media only screen and (max-width: 600px) {
   #colorMenu {
     display: none;
-    width: 5%;
+    width: 100%;
   }
 
   #nexu {
     display: block;
     text-align: center;
   }
+
+  .cut {
+    display: none;
+  }
+
+  #imgtaille {
+    width: 100%;
+    height: auto;
+  }
 }
 
 #card {
-  margin-top: 40%;
-  margin: 3em;
-  height: 30em;
+  height: 100%;
 }
 
 #sizeCard {
@@ -77,7 +79,7 @@ body {
 .jeux {
   background-image: url("/aurliocut.png");
   background-repeat: no-repeat;
-  height: 71em;
+  height: 100%;
   width: 100%;
 }
 
@@ -88,13 +90,11 @@ body {
 }
 
 .imgLogo {
-  float: left;
-  margin: 20px;
+  margin: 10%;
 }
 
 .titre {
   font-size: 40px;
-  padding-left: 100px;
   font-weight: bold;
   color: #787878;
   font-family: Impact, fantasy;
@@ -107,17 +107,12 @@ body {
 }
 
 #menu {
-  padding-right: 120px;
   font-size: 30px;
 }
 
 .logoMenu {
   height: 90px;
   width: 90px;
-}
-
-#menuLi {
-  padding-left: 30px;
 }
 
 .bs-example {
@@ -135,7 +130,7 @@ body {
 .item,
 .active {
   height: 100%;
-  margin-top: 0px;
+  margin-top: 0%;
 }
 
 .carousel-inner {
@@ -145,7 +140,7 @@ body {
 .discord {
   background-image: url("/warwick.png");
   background-repeat: no-repeat;
-  height: 71em;
+  height: 100%;
   width: 100%;
 }
 
@@ -167,14 +162,14 @@ body {
 
 .cut {
   width: 100%;
-  height: 7em;
+  height: 5%;
   background-image: url("/backgroundWires.png");
   background-attachment: fixed;
 }
 
 .miniCut {
   width: 100%;
-  height: 1em;
+  height: 2%;
   background-color: #2f2f2f;
   color: white;
   font-size: 20px;
