--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,3 +1,5 @@
+@charset "UTF-8";
+
 html,
 body {
   height: 100%;
@@ -20,7 +22,6 @@ body {
 }
 
 #titleh2 {
-  text-align: center;
   font-size: 45px;
   font-family: Impact, fantasy;
   color: white;
@@ -37,27 +38,6 @@ body {
 #colorMenu {
   background-color: white;
   width: 100%;
-}
-
-@media only screen and (max-width: 600px) {
-  #colorMenu {
-    display: none;
-    width: 100%;
-  }
-
-  #nexu {
-    display: block;
-    text-align: center;
-  }
-
-  .cut {
-    display: none;
-  }
-
-  #imgtaille {
-    width: 100%;
-    height: auto;
-  }
 }
 
 #card {
@@ -117,7 +97,6 @@ body {
 
 .bs-example {
   width: 100%;
-  height: 100%;
 }
 
 #imgtaille img {
@@ -150,14 +129,6 @@ body {
   margin-left: 20%;
   -webkit-box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
           box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
-}
-
-#titleh3 {
-  display: inline-block;
-  margin-top: 15%;
-  margin-left: 5%;
-  font-size: 60px;
-  color: white;
 }
 
 .cut {
@@ -229,10 +200,72 @@ body {
   }
 }
 
-@media only screen and (max-width: 400px) {
-  #linkDiscord {
-    max-width: 10%;
+@media only screen and (max-width: 600px) {
+  #colorMenu {
+    display: none;
+    width: 100%;
+  }
+
+  #nexu {
+    display: block;
     text-align: center;
+  }
+
+  .miniCut {
+    display: none;
+  }
+
+  .cut {
+    display: none;
+  }
+
+  #imgtaille {
+    width: 100%;
+    height: auto;
+  }
+
+  .bs-example {
+    height: auto;
+  }
+
+  body {
+    background-color: #2f2f2f;
+  }
+
+  html {
+    width: 100%;
+  }
+
+  .ui.inverted.card.cardsResp {
+    display: none;
+  }
+
+  .presentation {
+    margin-bottom: 80%;
+    margin-top: 3em;
+  }
+
+  #page-1 {
+    background-image: none;
+  }
+
+  #page-2 {
+    background-image: none;
+  }
+
+  #page-3 {
+    background-image: none;
+  }
+
+  #linkDiscord {
+    margin-top: 107em;
+    margin-left: 25%;
+    width: 50%;
+    height: 50%;
+  }
+
+  #itemsMenu {
+    font-size: 27px;
   }
 }
 
