--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -218,25 +218,25 @@ body {
   }
   #page-1 {
     background-image: none;
+    height: 100%;
   }
   #page-2 {
     background-image: none;
+    height: 100%;
   }
   #page-3 {
     background-image: none;
+    height: 100%;
   }
 
   #linkDiscord{
-    margin-top: 113em;
+    border-bottom: 0 auto;
     margin-left: 25%;
     width: 50%;
     height: 50%;
   }
   #itemsMenu{
     font-size: 20px;
-  }
-  .sixteen.wide.column {
-    height: 20%;
   }
 }
 
