--- a/public/css/app.css
+++ b/public/css/app.css
@@ -19,6 +19,11 @@ body {
   background-image: url("/annieHex.png");
   height: 100%;
   width: 100%;
+  background-repeat: no-repeat;
+}
+
+.cutResp {
+  display: none;
 }
 
 #titleh2 {
@@ -97,6 +102,10 @@ body {
 
 .bs-example {
   width: 100%;
+}
+
+.joinResp {
+  display: none;
 }
 
 #imgtaille img {
@@ -200,7 +209,7 @@ body {
   }
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 640px) {
   #colorMenu {
     display: none;
     width: 100%;
@@ -241,34 +250,43 @@ body {
   }
 
   .presentation {
-    margin-bottom: 80%;
-    margin-top: 5em;
+    height: 100%;
+    margin-top: 20%;
+  }
+
+  .jeux {
+    margin-top: 70%;
+    height: 100%;
   }
 
   #page-1 {
     background-image: none;
-    height: 100%;
   }
 
   #page-2 {
     background-image: none;
-    height: 100%;
   }
 
   #page-3 {
     background-image: none;
-    height: 100%;
   }
 
   #linkDiscord {
-    border-bottom: 0 auto;
-    margin-left: 25%;
-    width: 50%;
-    height: 50%;
+    display: none;
   }
 
   #itemsMenu {
     font-size: 20px;
+  }
+
+  .joinResp {
+    margin-top: 10%;
+    display: block;
+  }
+
+  .cutResp {
+    display: block;
+    height: 10%;
   }
 }
 
