--- a/public/css/app.css
+++ b/public/css/app.css
@@ -209,7 +209,7 @@ body {
   }
 }
 
-@media only screen and (max-width: 640px) {
+@media only screen and (max-width: 630px) {
   #colorMenu {
     display: none;
     width: 100%;
@@ -268,6 +268,7 @@ body {
   }
 
   #page-3 {
+    display: none;
     background-image: none;
   }
 
