--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -182,7 +182,7 @@ body {
   }
 }
 
-@media only screen and ( max-width: 640px){
+@media only screen and ( max-width: 630px){
 
 
   #colorMenu {
@@ -236,6 +236,7 @@ body {
 
 }
 #page-3 {
+  display: none;
   background-image: none;
 }
 
